--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="page"><a href="services.html"> Services</a></div>
         </nav>
         <h1>Try again you will get what you want</h1>
+        <h2>This is updated web of newwebbymeee</h2>
     </div>
 </body>
 </html>
